# opita-vibe-studio

./: .env.example  .env.staging  .gitignore  .npmrc  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  body.json  chat.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  release-notes.md  sst-env.d.ts  sst.config.ts  tailwind.config.js  testers.txt  tsconfig.json  vite.config.ts
.github/workflows/: build-tauri.yml  deploy-backend.yml  deploy-landing.yml  deploy-web-app.yml  deploy.yml
.husky/: pre-commit
docs/install/: INSTALACION.md
landing/: index.html  install.html
openspec/: config.yaml
public/: manifest.webmanifest
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: chatgpt.json  default.json  http.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth_server.rs  lib.rs  main.rs
src-tauri/src/commands/: fs.rs  mod.rs  project.rs  shell.rs
src/agent/: agent-tools.ts  build-agent.ts  chat-agent.ts  context-loader.ts  explore-agent.ts  idea-backlog.ts  index.ts  intent.ts  model-router.ts  nudge-channel.ts  nudge-guard.ts  orchestrator.ts  prompts.ts  roadmap-tracker.ts  spec-writer.ts  stream-client.ts  types.ts  useAgentHandler.ts
src/assets/: brand.css
src/auth/: sso.ts  verification.ts
src/components/: ErrorBoundary.stories.tsx  ErrorBoundary.tsx
src/core/: CoreHost.ts  types.ts
src/hooks/: useAgentSync.ts  useAutoSync.ts  usePaymentRedirect.ts  usePurchaseIntent.ts  useSessionBoot.ts  useWorkspaceReopen.ts
tests/: setup.ts
(+558 files in other folders)
